@@ -12,7 +12,9 @@
 #+export_file_name: RELEASE.md
 
 * v0.6.0 Fighting Spam 💌 :latest:
+- New actions (*KMACROS!*) fit a more clear pattern
 ** Added ➕
+- 🧬 Experimental new kmacro action can run keyboard kmacros to script "live demonstrations".  Describe ~dslide-action-kmacro~ to view the documentation.  There is a demo in the usual [] file.  All related functions and variables are under the =dslide-action-kmacro= or =dslide-kmacro= prefixes.
 - Babel blocks, which will now all be executed by default, respect the =:eval= parameter.  Values such as =never= or =never-export= will skip the block.  Other values are equivalent to =yes=.  Values like =query= do *not* ask yet.  Expect that in 0.7.0. 🚧
   #+begin_src org
     ,#+begin_src elisp :eval never
